tests/agl/rejections/type/opacity_fn_interpolation.agl
def dbl(n: int) -> int = n * 2
let msg = "result: ${dbl}"
msg
